--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2169,8 +2169,9 @@
 
   &::before {
     display: inline-block;
-    font-family: 'arrow';
-    content: '\0043';
+    font-family: @custom-icon-font-family-name;
+    content: "\61";
+    font-size: 17px;
     color: @white-color;
     bottom: 9px;
     right: @margin10;
