--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -23,6 +23,7 @@
             <ul>
               <li><a href="../ku-courses/">Kurser.ku.dk</a>
               <li><a href="../ku-course-details/">Kursus detaljeside</a></li>
+              <li><a href="../ku-schedule/">Kursus skemaside</a></li>
               <li><a href="#">Link 3.3</a>
                 <ul>
                   <li><a href="#">Link 4.1 - one more very, very, very, long text</a></li>
