--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -99,7 +99,7 @@
     </div>
   </div>
 </footer>
-<script src="http://cms.ku.dk/system/valid_search_engines.js?lang=da"></script>
+<script src="https://bootstrap.secure.ku.dk/scripts/valid_search_engines_da.js"></script>
 {% if site.github %}
 <script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
