--- a/less/ku-visited-links.less
+++ b/less/ku-visited-links.less
@@ -63,14 +63,14 @@ a {
     }
   }
 
-  .pager > li > &:visited,
-  .pagination > li > &:visited {
-    &,
-    &:focus,
-    &:hover {
-      color: @link-color!important;
-    }
-  }
+  // .pager > li > &:visited,
+  // .pagination > li > &:visited {
+  //   &,
+  //   &:focus,
+  //   &:hover {
+  //     color: @link-color!important;
+  //   }
+  // }
 
   .pagination > .active > &:visited {
     &,
@@ -80,13 +80,13 @@ a {
     }
   }
 
-  .pagination > .disabled > &:visited {
-    &,
-    &:focus,
-    &:hover {
-      color: @pagination-disabled-color!important;
-    }
-  }
+  // .pagination > .disabled > &:visited {
+  //   &,
+  //   &:focus,
+  //   &:hover {
+  //     color: @pagination-disabled-color!important;
+  //   }
+  // }
 
   &.alert-link:visited {
     color: inherit!important;
