--- a/less/navbar.less
+++ b/less/navbar.less
@@ -659,12 +659,12 @@
       }
 
       &.eng {
-        background-image: url("http://cms.ku.dk/grafik/globalmenu/flag-uk.gif");
+        background-image: url("https://bootstrap.secure.ku.dk/img/flag-uk.gif");
         width: 71px;
       }
 
       &.dan {
-        background-image: url("http://cms.ku.dk/grafik/globalmenu/flag-dk.gif");
+        background-image: url("https://bootstrap.secure.ku.dk/img/flag-dk.gif");
         width: 68px;
       }
     }
@@ -804,7 +804,7 @@
   }
   // KU top logo positioning
   .topbar-logo {
-    background-image: url('http://cms.ku.dk/billeder/toplogo_dk.svg');
+    background-image: url('https://bootstrap.secure.ku.dk/img/toplogo_dk.svg');
     background-repeat: no-repeat;
     background-position: left center;
     background-size: contain;
@@ -827,7 +827,7 @@
 
 // English version
     html:lang(en) & {
-      background-image: url('http://cms.ku.dk/billeder/toplogo_uk.svg');
+      background-image: url('https://bootstrap.secure.ku.dk/img/toplogo_uk.svg');
       width: 75%;
       left: @margin20;
       @media (min-width: @screen-xs-max) {
