--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -40,7 +40,7 @@
         <div class="col-xs-3 footercolumn">
           <h3 data-heading="toggle" class="footer-heading">For studerende og ansatte</h3>
           <ul class="footerlinks" role="menu">
-            <li role="menuitem"><a class="icon icon-padlock" href="http://intranet.ku.dk">KUnet</a></li>
+            <li role="menuitem"><a class="padlock" href="http://intranet.ku.dk">KUnet</a><span class="icon icon-padlock"></span></li>
           </ul>
           <h3 data-heading="toggle" class="footer-heading">Job og karriere</h3>
           <ul class="footerlinks" role="menu">
@@ -61,38 +61,39 @@
             <li role="menuitem"><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
             <li><a href="http://velkommen.ku.dk/indeks">A-Å-indeks</a></li>
           </ul>
-          <div class="social-items">
+
             <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
-            <div class="social-item">
-              <a target="_blank" href="https://www.facebook.com/universitet" class="icon icon-facebook" title="Facebook"></a>
-            </div>
-            <div class="social-item">
-              <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="icon icon-linkedin" title="LinkedIn"></a>
-            </div>
-            <div class="social-item">
-              <a target="_blank" href="http://velkommen.ku.dk/apps" class="icon icon-phone" title="KU Apps"></a>
-            </div>
-            <div class="social-item">
-              <a target="_blank" href="http://nyheder.ku.dk/rss/" class="icon icon-rss" title="RSS"></a>
-            </div>
-            <div class="social-item">
-              <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="icon icon-twitter" title="Twitter"></a>
-            </div>
-            <div class="social-item">
-              <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="icon icon-youtube" title="YouTube"></a>
-            </div>
-            <div class="social-item">
-              <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="icon icon-futurity" title="futurity"></a>
-            </div>
-            <div class="social-item">
-              <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="icon icon-conversation" title="The Conversation"></a>
-            </div>
-            <div class="social-item">
-              <a target="_blank" href="https://www.coursera.org/ucph" class="icon icon-coursera" title="Coursera"></a>
-            </div>
-            <div class="social-item">
-              <a target="_blank" href="http://video.ku.dk" class="icon icon-video" title="KU Videoportal"></a>
-            </div>
+            <div class="social-items">
+              <div class="social-item">
+                <a target="_blank" href="https://www.facebook.com/universitet" class="icon icon-facebook" title="Facebook"></a>
+              </div>
+              <div class="social-item">
+                <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="icon icon-linkedin" title="LinkedIn"></a>
+              </div>
+              <div class="social-item">
+                <a target="_blank" href="http://velkommen.ku.dk/apps" class="icon icon-phone" title="KU Apps"></a>
+              </div>
+              <div class="social-item">
+                <a target="_blank" href="http://nyheder.ku.dk/rss/" class="icon icon-rss" title="RSS"></a>
+              </div>
+              <div class="social-item">
+                <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="icon icon-twitter" title="Twitter"></a>
+              </div>
+              <div class="social-item">
+                <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="icon icon-youtube" title="YouTube"></a>
+              </div>
+              <div class="social-item">
+                <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="icon icon-futurity" title="futurity"></a>
+              </div>
+              <div class="social-item">
+                <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="icon icon-conversation" title="The Conversation"></a>
+              </div>
+              <div class="social-item">
+                <a target="_blank" href="https://www.coursera.org/ucph" class="icon icon-coursera" title="Coursera"></a>
+              </div>
+              <div class="social-item">
+                <a target="_blank" href="http://video.ku.dk" class="icon icon-video" title="KU Videoportal"></a>
+              </div>
           </div>
         </div>
       </div>
