--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -97,7 +97,6 @@ nav {
   margin: @margin10 0;
   &:extend(.clearfix all);
 }
-
 @media (min-width: @screen-sm) {
   // Make columns equal height
   .row-equal-height {
@@ -207,37 +206,37 @@ nav {
     display: none;
   }
 }
-
 // KU loading symbol
+
 .ku-loading {
-    border-bottom: 6px solid @gray;
-    border-left: 6px solid @gray;
-    border-right: 6px solid @gray;
-    border-top: 6px solid @ku-red;
-    border-radius: 100%;
-    height: 50px;
-    width: 50px;
-    animation: ku-loading .6s infinite linear;
-    overflow: auto;
-    position: absolute;
-    top: 37%;
-    left: 40%;
+  border-bottom: 6px solid @gray;
+  border-left: 6px solid @gray;
+  border-right: 6px solid @gray;
+  border-top: 6px solid @ku-red;
+  border-radius: 100%;
+  height: 50px;
+  width: 50px;
+  animation: ku-loading 0.6s infinite linear;
+  overflow: auto;
+  position: absolute;
+  top: 37%;
+  left: 40%;
 }
-
 @-webkit-keyframes ku-loading {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(359deg);
-    }
-}
+  from {
+    transform: rotate(0deg);
+  }
 
+  to {
+    transform: rotate(359deg);
+  }
+}
 @keyframes ku-loading {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(359deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(359deg);
+  }
 }
