--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2171,6 +2171,7 @@
     display: inline-block;
     font-family: @custom-icon-font-family-name;
     content: "\61";
+    text-transform: none;
     font-size: 17px;
     color: @white-color;
     bottom: 9px;
