--- a/docs/assets/css/multiple-select/multiple-select.css
+++ b/docs/assets/css/multiple-select/multiple-select.css
@@ -1,7 +1,7 @@
 /**
  * @author zhixin wen: https://github.com/wenzhixin/multiple-select
  */
-
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=latin-ext');
 .ms-parent {
   display: inline-block;
   position: relative;
@@ -11,15 +11,17 @@
 .ms-choice {
   display: block;
   width: 100%;
-  height: 29px;
+  height: 34px;
   padding: 0;
   overflow: hidden;
   cursor: pointer;
   border: 1px solid #ccc;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
   text-align: left;
   white-space: nowrap;
-  line-height: 26px;
-  color: #444;
+  line-height: 34px;
+  color: #555;
   text-decoration: none;
   border-radius: 2px;
   background-color: #fff;
@@ -46,7 +48,9 @@
 }
 
 .ms-choice>span.placeholder {
-  color: #252525;
+  color: #555;
+  font-family: 'Open Sans', arial;
+  font-size: 12px;
 }
 
 .ms-choice>div {
