--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -15,29 +15,24 @@
     height: @ku-branding-box-height;
     width: 61px;
     z-index: 10;
-    float: left;
     position: relative;
     bottom: -5px;
     @media (max-width: @screen-sm-min) {
       width: 50px;
       bottom: -20px;
+      left: @grid-gutter-by-half;
     }
   }
 
   .ku-branding-text {
     max-height: @ku-branding-box-height;
-    letter-spacing: 0.1em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 86px;
-    padding-left: 10px;
-    @media (min-width: @screen-sm-min) {
-      padding-left: 15px;
-    }
+    position: absolute;
+    left: 83px;
+    bottom: 18px;
+    letter-spacing: 0.936px;
 
     .ku-branding-text-major {
-      font-size: 1.16em;
+      font-size: 1.1em;
       @media (min-width: @screen-sm-min) {
         font-size: @ku-branding-text-font-size;
       }
@@ -45,7 +40,7 @@
 
     .ku-branding-text-sub {
       font-size: @font-size-large;
-      margin-top: 2px;
+      //margin-top: 2px;
     }
 
     a {
@@ -54,12 +49,13 @@
   }
 
   .ku-branding-line {
-    @media (max-width: @screen-xs-max) {
-      padding-left: @padding20;
-      padding-right: @padding20;
+    @media (min-width: @screen-sm) {
+      margin-top: 3px;
     }
+    &:extend(.clearfix all);
+    position: relative;
     border-bottom: 1px solid @ku-red;
-    margin-top: 3px;
+
 
     .theme-samf & {
       border-bottom: 1px solid @samf;
