--- a/less/variables.less
+++ b/less/variables.less
@@ -386,7 +386,10 @@
 //** Padding between columns. Gets divided in half for the left and right.
 @grid-gutter-width:         26px;
 // KU specific:
-@grid-gutter-height:         23px;
+@grid-gutter-height:        23px;
+// KU specific:
+@grid-gutter-by-half:       floor((@grid-gutter-width / 2));
+
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
 @grid-float-breakpoint:     @screen-sm-min;
