--- a/docs/assets/css/slider/slick-theme.css
+++ b/docs/assets/css/slider/slick-theme.css
@@ -57,7 +57,11 @@
   min-height: 80px;
   width: 100%;
   z-index: 2;
-  padding: 10px;
+  padding: 15px;
+}
+
+.slick-slider .caption h2 {
+  margin-top: 0;
 }
 
 .slick-slider .text-bottom .caption {
@@ -112,6 +116,9 @@
     width: 50%;
   }
   .slick-slider .caption {
+    height: auto;
+    background-color: rgba(255,255,255 ,.8);
     position: absolute;
+    bottom: 0;
   }
 }
